deployment-ingress/deployment-v3.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
spec:
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: commandemy/flask-app:v3
        ports:
        - containerPort: 80
      volumes:
      - name: config-volume
        configMap:
          name: flask-app-config
