deployment-ingress/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flask-app
  labels:
    app: flask-app
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: flask-app
